# cargo-mobile2

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md  build.rs  fast-install.sh
.changes/: config.json
Source/: device.rs  dot_cargo.rs  env.rs  init.rs  lib.rs  opts.rs  project.rs  target.rs  update.rs
Source/android/: aab.rs  apk.rs  bundletool.rs  cli.rs  config.rs  device.rs  env.rs  jnilibs.rs  mod.rs  ndk.rs  project.rs  source_props.rs  target.rs
Source/android/adb/: device_list.rs  device_name.rs  get_prop.rs  mod.rs
Source/android/emulator/: avd_list.rs  mod.rs
Source/apple/: cli.rs  mod.rs  project.rs  system_profile.rs  target.rs  teams.rs  version_number.rs
Source/apple/config/: mod.rs  raw.rs
Source/apple/device/: mod.rs
Source/apple/device/devicectl/: device_list.rs  run.rs
Source/apple/device/ios_deploy/: device_list.rs  mod.rs  run.rs
Source/apple/device/simctl/: device_list.rs  mod.rs  run.rs
Source/bicycle/: json_map.rs  mod.rs  traverse.rs
Source/config/: metadata.rs  mod.rs  raw.rs
Source/config/app/: common_email_providers.rs  domain.rs  identifier.rs  lib_name.rs  mod.rs  name.rs  raw.rs
Source/doctor/: mod.rs
Source/doctor/section/: android.rs  apple.rs  cargo_mobile.rs  device_list.rs  mod.rs
Source/os/: mod.rs
Source/os/linux/: info.rs  mod.rs  xdg.rs
Source/os/macos/: ffi.rs  info.rs  mod.rs
Source/os/windows/: env.rs  info.rs  ln.rs  mod.rs
Source/reserved_names/: mod.rs
Source/templating/: fancy.rs  filter.rs  init.rs  mod.rs
Source/util/: cargo.rs  cli.rs  ln.rs  mod.rs  path.rs  prompt.rs
Source/util/git/: lfs.rs  mod.rs  repo.rs  submodule.rs
templates/apps/bevy/: README.md
templates/apps/bevy-demo/: Cargo.toml.hbs  README.md
templates/apps/dioxus/: README.md
templates/apps/egui/: README.md
templates/apps/egui/Source/: lib.rs
templates/apps/wgpu/: README.md
templates/apps/wgpu/Source/: lib.rs.hbs
templates/apps/winit/: README.md
templates/apps/wry/: README.md
