[[bin]]
name = "cargo-mobile"
path = "Source/bin/cargo-mobile.rs"
required-features = ["cli"]

[[bin]]
name = "cargo-apple"
path = "Source/bin/cargo-apple.rs"
required-features = ["cli"]

[[bin]]
name = "cargo-android"
path = "Source/bin/cargo-android.rs"
required-features = ["cli"]

[build-dependencies]
dunce = { version = "1.0", optional = true }
handlebars = { version = "6.3", optional = true }
home = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2.0", optional = true }

[dependencies]
colored = "3.0"
deunicode = "1.6"
duct = "0.13"
dunce = "1.0"
english-numbers = "0.3"
env_logger = { version = "0.11", optional = true }
handlebars = "6"
heck = "0.5"
home = "0.5"
ignore = "0.4"
java-properties = "2.0"
log = "0.4"
once-cell-regex = "0.2"
os_pipe = "1"
path_abs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", optional = true }
textwrap = { version = "0.16", features = ["terminal_size"] }
thiserror = "2.0"
toml = { version = "0.8", features = ["preserve_order"] }
which = "7"

[dev-dependencies]
rstest = "0.24"

[features]
brainium = []
cli = [
	"home",
	"dunce",
	"handlebars",
	"log",
	"serde",
	"serde_json",
	"thiserror",
	"structopt",
	"env_logger",
]
default = ["cli", "native-tls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/rustls"]

[lib]
path = "Source/lib.rs"

[package]
authors = [
	"Tauri Programme within The Commons Conservancy",
	"Brainium Studios LLC",
	"Francesca Lovebloom <francesca@brainiumstudios.com>",
]
categories = ["development-tools::cargo-plugins"]
description = "Rust on mobile made easy!"
documentation = "https://docs.rs/cargo-mobile2"
edition = "2024"
keywords = ["cargo", "mobile", "ios", "android", "tauri"]
license-file = "LICENSE"
name = "cargo-mobile2"
readme = "README.md"
repository = "https://github.com/tauri-apps/cargo-mobile2"
rust-version = "1.85.0"
version = "0.17.5"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["native-tls"]
no-default-features = true
targets = [
	"x86_64-pc-windows-msvc",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
]

[target]

[target.'cfg(not(target_os = "macos"))']

[target.'cfg(not(target_os = "macos"))'.dependencies]
ureq = { version = "3.0", default-features = false, features = ["gzip"] }

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3"

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
os_info = "3"
x509-certificate = "0.24"

[target."cfg(unix)"]

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)"]

[target."cfg(windows)".build-dependencies]
embed-resource = "3.0"

[target."cfg(windows)".dependencies]

[target."cfg(windows)".dependencies.windows]
features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_IO",
	"Win32_System_Ioctl",
	"Win32_System_Memory",
	"Win32_System_Registry",
	"Win32_System_SystemInformation",
	"Win32_System_SystemServices",
	"Win32_UI_Shell",
]
version = "0.59"
